FIX big gap between "in sale" and "owned" in /inventory + FIX overlapped 2 scrollable div in mobile

--- a/dapp/src/components/Inventory/ItemsInventory/ItemsInventory.module.scss
+++ b/dapp/src/components/Inventory/ItemsInventory/ItemsInventory.module.scss
@@ -2,11 +2,6 @@
 @import "assets/sass/theme.scss";
 
 .all-items {
-    position: absolute;
-    top: 160px;
-    bottom: -15px;
-    left: 0;
-    right: 0;
     padding: 15px;
     width: 100%;
     padding-bottom: 120px;
@@ -146,7 +141,6 @@
         left: 0;
         right: 0;
         padding-bottom: 0;
-        height: 100%;
 
         &.has-filter {
             top: 0;
